--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ testem.log
 Thumbs.db
 
 .nx/cache
+
+# Next.js
+apps/**/.next
+
+build/
+node_modules/
+.secret-*
+**.sample
+#amplify-do-not-edit-end
