--- a/package.json
+++ b/package.json
@@ -2,39 +2,87 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "heroku-postbuild": "nx build $PROJECT_NAME --prod"
+  },
   "private": true,
+  "engines": {
+    "node": "18.14.x"
+  },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nx/nest": "17.2.8",
+    "@swc/helpers": "~0.5.6",
+    "axios": "^1.6.7",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
+    "styled-jsx": "5.1.2",
+    "tslib": "^2.6.2",
+    "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
     "@nx/eslint": "17.2.4",
     "@nx/eslint-plugin": "17.2.4",
-    "@nx/js": "17.2.4",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/next": "^17.3.2",
+    "@nx/node": "17.2.8",
+    "@nx/react": "17.2.7",
     "@nx/vite": "17.2.4",
     "@nx/vue": "17.2.4",
+    "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.4",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@svgr/webpack": "^8.1.0",
+    "@swc-node/register": "~1.6.8",
+    "@swc/cli": "~0.1.65",
+    "@swc/core": "~1.3.107",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "~0.34.6",
+    "@vitest/ui": "~0.34.7",
     "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.1",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.4.0",
+    "babel-jest": "^29.7.0",
     "eslint": "~8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-vue": "^9.16.1",
+    "eslint-config-next": "13.4.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "17.2.4",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
+    "react-refresh": "^0.10.0",
     "sass": "1.62.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
-    "vite": "^5.0.0",
+    "url-loader": "^4.1.1",
+    "vite": "^5.1.1",
     "vitest": "~0.34.6",
-    "vue-tsc": "^1.8.8"
+    "vue-tsc": "^1.8.27"
   }
 }
