--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nx/nest": "17.2.8",
     "@swc/helpers": "~0.5.6",
     "axios": "^1.6.7",
-    "next": "13.4.4",
+    "formik": "^2.4.6",
+    "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
@@ -60,6 +61,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "eslint": "~8.48.0",
     "eslint-config-next": "13.4.4",
@@ -74,9 +76,11 @@
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "17.2.4",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.8",
     "react-refresh": "^0.10.0",
     "sass": "1.62.1",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.2",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
