--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rxjs": "^7.8.1",
     "styled-jsx": "5.1.2",
     "tslib": "^2.6.2",
-    "vue": "^3.4.19"
+    "vue": "^3.4.19",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.1.1",
