--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,11 @@
     "build": {
       "cache": true,
       "dependsOn": ["^build"],
-      "inputs": ["production", "^production"]
+      "inputs": ["production", "^production"],
+      "options": {
+        "sourceMap": true
+      }
+    },
     },
     "lint": {
       "cache": true,
