--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@org/common": ["common/src/index.ts"],
+      "@org/types": ["types/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
