--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "17.2.8",
     "@swc/helpers": "~0.5.6",
+    "@types/cookie-parser": "^1.4.7",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "next": "13.4.4",
@@ -66,6 +68,7 @@
     "@types/lodash": "^4.17.6",
     "@types/node": "18.16.9",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.11.6",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
