--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -11,6 +11,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "paths": {
+      "$/*": ["./apps/client/*"],
+      "@org/*": ["./*"]
+    },
     "plugins": [
       {
         "name": "next"
