--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "formik": "^2.4.6",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "next": "^14.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
-    "formik": "^2.4.6",
-    "next": "^14.2.4",
     "react": "18.2.0",
+    "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.14",
