--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "17.2.8",
     "@swc/helpers": "~0.5.6",
+    "@tiptap/extension-color": "^2.6.4",
+    "@tiptap/extension-text-style": "^2.6.4",
+    "@tiptap/react": "^2.6.4",
+    "@tiptap/starter-kit": "^2.6.4",
     "@types/cookie-parser": "^1.4.7",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
@@ -38,8 +42,10 @@
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
+    "react-slick": "^0.30.2",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "slick-carousel": "^1.8.1",
     "styled-jsx": "5.1.2",
     "tslib": "^2.6.2",
     "typeorm": "^0.3.20",
@@ -74,6 +80,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
