FE/BE auth,member,jwt

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "next": "^14.2.4",
@@ -74,6 +75,7 @@
     "@testing-library/react": "14.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "18.16.9",
     "@types/passport-jwt": "^4.0.1",
