--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node": "18.17.x"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/pro-components": "^2.7.19",
     "@emotion/css": "^11.13.0",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.3",
@@ -29,7 +31,8 @@
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
     "@types/cookie-parser": "^1.4.7",
-    "axios": "^1.6.7",
+    "antd": "^5.21.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "formik": "^2.4.6",
@@ -43,7 +46,7 @@
     "react": "18.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-slick": "^0.30.2",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
