--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "17.2.8",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.3",
     "@swc/helpers": "~0.5.6",
     "@tiptap/extension-color": "^2.6.4",
     "@tiptap/extension-text-style": "^2.6.4",
