--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "js-cookie": "^3.0.5",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "^14.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "18.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.30.2",
     "reflect-metadata": "^0.1.14",
