--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "heroku-postbuild": "nx build $PROJECT_NAME --prod",
+    "heroku-postbuild": "cp $PROCFILE Procfile && nx build $PROJECT_NAME --prod",
     "typeorm": "./node_modules/.bin/typeorm-ts-node-commonjs",
-    "migration:generate": "npm run typeorm -- migration:generate -d common/src/data-source.ts",
-    "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d common/src/data-source.ts"
+    "migrate": "node db_migration/flyway.js migrate",
+    "clean": "node db_migration/flyway.js clean",
+    "info": "node db_migration/flyway.js info",
+    "validate": "node db_migration/flyway.js validate",
+    "baseline": "node db_migration/flyway.js baseline",
+    "repair": "node db_migration/flyway.js repair"
   },
   "private": true,
   "engines": {
     "node": "18.17.x"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/pro-components": "^2.7.19",
     "@emotion/css": "^11.13.0",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.3",
@@ -23,27 +28,33 @@
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/typeorm": "^10.0.2",
     "@nx/nest": "17.2.8",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.3",
     "@swc/helpers": "~0.5.6",
     "@tiptap/extension-color": "^2.6.4",
     "@tiptap/extension-text-style": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
     "@types/cookie-parser": "^1.4.7",
-    "axios": "^1.6.7",
+    "antd": "^5.21.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "^14.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "18.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.11.2",
     "react-slick": "^0.30.2",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
@@ -121,5 +132,27 @@
     "vite": "^5.1.1",
     "vitest": "~0.34.6",
     "vue-tsc": "^1.8.27"
+  },
+  "optionalDependencies": {
+    "@nx/nx-darwin-arm64": "18.0.4",
+    "@nx/nx-darwin-x64": "18.0.4",
+    "@nx/nx-linux-x64-gnu": "18.0.4",
+    "@nx/nx-win32-x64-msvc": "18.0.4",
+    "@rollup/rollup-android-arm-eabi": "4.19.1",
+    "@rollup/rollup-android-arm64": "4.19.1",
+    "@rollup/rollup-darwin-arm64": "4.19.1",
+    "@rollup/rollup-darwin-x64": "4.19.1",
+    "@rollup/rollup-linux-arm-gnueabihf": "4.19.1",
+    "@rollup/rollup-linux-arm-musleabihf": "4.19.1",
+    "@rollup/rollup-linux-arm64-gnu": "4.19.1",
+    "@rollup/rollup-linux-arm64-musl": "4.19.1",
+    "@rollup/rollup-linux-powerpc64le-gnu": "4.19.1",
+    "@rollup/rollup-linux-riscv64-gnu": "4.19.1",
+    "@rollup/rollup-linux-s390x-gnu": "4.19.1",
+    "@rollup/rollup-linux-x64-gnu": "4.19.1",
+    "@rollup/rollup-linux-x64-musl": "4.19.1",
+    "@rollup/rollup-win32-arm64-msvc": "4.19.1",
+    "@rollup/rollup-win32-ia32-msvc": "4.19.1",
+    "@rollup/rollup-win32-x64-msvc": "4.19.1"
   }
 }
