--- a/types/package.json
+++ b/types/package.json
@@ -6,5 +6,6 @@
   },
   "type": "commonjs",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "types": "./src/index.d.ts"
 }
