--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,11 @@
       "@org/common": ["common/src/index.ts"],
       "@org/types": ["types/src/index.ts"]
     },
-    "typeRoots": ["./node_modules", "./types/src"]
+   "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules",
+      "./types/src"
+    ],
   },
   "exclude": ["node_modules", "tmp"]
 }
