--- a/apps/bo/project.json
+++ b/apps/bo/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/bo"
+        "outputPath": "dist/apps/bo",
+        "configFile": "apps/bo/vite.config.ts"
       },
       "configurations": {
         "development": {
@@ -24,7 +25,8 @@
       "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "bo:build"
+        "buildTarget": "bo:build",
+        "configFile": "apps/bo/vite.config.ts"
       },
       "configurations": {
         "development": {
