--- a/apps/bo/tsconfig.json
+++ b/apps/bo/tsconfig.json
@@ -1,19 +1,12 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
-    "allowJs": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "types": ["vite/client", "vitest"],
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["src/*"],
-      "@/*": ["src/*"]
-    }
+    "esModuleInterop": true,
+    "types": ["vite/client"]
+    // "types": ["vite/client", "vitest"],
   },
   "files": [],
-  "include": ["src"],
+  "include": [],
   "references": [
     {
       "path": "./tsconfig.app.json"
