--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "typescript": "~5.2.2",
     "url-loader": "^4.1.1",
     "vite": "^5.1.1",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "~0.34.6",
     "vue-tsc": "^1.8.27"
   },
