feat: add be/post module and integrate with bo/post management

--- a/apps/bo/tsconfig.app.json
+++ b/apps/bo/tsconfig.app.json
@@ -2,12 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": [
-      "node"
-    ],
-    "module": "commonjs",
+    "types": ["node"],
+    "module": "ESNext",
     "emitDecoratorMetadata": true,
-    "target": "es2021"
+    "target": "ESNext"
   },
   "exclude": [
     "src/**/*.spec.ts",
