--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ESNext",
     "module": "esnext",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
@@ -18,11 +18,7 @@
       "@org/common": ["common/src/index.ts"],
       "@org/types": ["types/src/index.ts"]
     },
-   "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules",
-      "./types/src"
-    ],
+    "typeRoots": ["./node_modules/@types", "./node_modules", "./types/src"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "tmp"]
