--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "knex": "^3.1.0",
