--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "knex": "^3.1.0",
+    "knex-stringcase": "^1.5.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
